2007-05-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.7-1 release]

	* NEWS:
	* debian/changelog:
	* configure.ac: Updating.

2007-05-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac: Adding a special '--enable-xan' configure option that
	turns off the -Werror compilation setting. Usefull for development.

	* src/hildon-calendar.c:
	* src/hildon-number-editor.c:
	* src/hildon-time-picker.c: Adding the 5* multiplier to
	gtk-timeout-update.

2007-05-24  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-note.c (hildon_note_init): Use g_object_ref_sink
	instead of g_object_ref + gtk_object_sink.

2007-05-22  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.6-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c: A few more GdkColor struct allocation fixes
	straight from Tommi labs.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-finger-example.c: Correcting the header file path.

	* src/hildon-color-chooser-dialog.c: Allocate the color on the stack for 
	the changed signal. Fixes a small memory leak.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* autogen.sh:
	* debian/rules:
	* src/hildon-banner.c: Importing several usefull fixes from the
	ubuntu-mobile branch.

2007-05-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-finger-example.c: Adding a finger-checking code
	example. 

	* src/hildon-font-selection-dialog.c: Do not allocate the color
	structure using the g_new. Fixes NB#54061.

2007-05-09  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Correcting tabs in file.

2007-05-08  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c: Use set_child_visible only to