@@ -1,3 +1,8 @@
+2007-05-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* examples/hildon-date-editor-example.c: Adding error callback to the date
+	editor example. 
+
 2007-05-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	[1.0.7-1 release]
